syntax = "proto3";

package market_intel.common;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Common message types used across all services

// Response status enum
enum ResponseStatus {
  RESPONSE_STATUS_SUCCESS = 0;
  RESPONSE_STATUS_ERROR = 1;
  RESPONSE_STATUS_NOT_FOUND = 2;
  RESPONSE_STATUS_UNAUTHORIZED = 3;
  RESPONSE_STATUS_FORBIDDEN = 4;
  RESPONSE_STATUS_VALIDATION_ERROR = 5;
  RESPONSE_STATUS_INTERNAL_ERROR = 6;
}

// Standard response wrapper
message StandardResponse {
  ResponseStatus status = 1;
  string message = 2;
  oneof data {
    google.protobuf.Empty empty = 3;
    string string_data = 4;
    int64 int_data = 5;
    double double_data = 6;
    bool bool_data = 7;
  }
  map<string, string> metadata = 8;
  google.protobuf.Timestamp timestamp = 9;
}

// Pagination request
message PaginationRequest {
  int32 page = 1;
  int32 page_size = 2;
  string sort_by = 3;
  string sort_order = 4; // "asc" or "desc"
}

// Pagination response
message PaginationResponse {
  int32 current_page = 1;
  int32 page_size = 2;
  int64 total_items = 3;
  int32 total_pages = 4;
  bool has_next = 5;
  bool has_previous = 6;
}

// Health check request
message HealthCheckRequest {
  string service_name = 1;
  map<string, string> metadata = 2;
}

// Health check response
message HealthCheckResponse {
  bool healthy = 1;
  string status = 2;
  string version = 3;
  google.protobuf.Timestamp uptime = 4;
  map<string, string> details = 5;
  repeated HealthCheckDependency dependencies = 6;
}

// Health check dependency
message HealthCheckDependency {
  string name = 1;
  bool healthy = 2;
  string status = 3;
  int64 response_time_ms = 4;
}

// Error details
message ErrorDetails {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
  repeated string stack_trace = 4;
}

// Time range
message TimeRange {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

// Market data symbol
message Symbol {
  string ticker = 1;
  string exchange = 2;
  string asset_class = 3; // "equity", "forex", "crypto", "commodity", "bond"
  string currency = 4;
}

// Price data
message Price {
  double value = 1;
  string currency = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// Quantity data
message Quantity {
  double value = 1;
  string unit = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// Market data types
enum MarketDataType {
  MARKET_DATA_TYPE_QUOTE = 0;
  MARKET_DATA_TYPE_TRADE = 1;
  MARKET_DATA_TYPE_AGGREGATE = 2;
  MARKET_DATA_TYPE_ORDER_BOOK = 3;
}

// Order side
enum OrderSide {
  ORDER_SIDE_BUY = 0;
  ORDER_SIDE_SELL = 1;
}

// Order type
enum OrderType {
  ORDER_TYPE_MARKET = 0;
  ORDER_TYPE_LIMIT = 1;
  ORDER_TYPE_STOP = 2;
  ORDER_TYPE_STOP_LIMIT = 3;
}

// Order status
enum OrderStatus {
  ORDER_STATUS_NEW = 0;
  ORDER_STATUS_PARTIALLY_FILLED = 1;
  ORDER_STATUS_FILLED = 2;
  ORDER_STATUS_CANCELLED = 3;
  ORDER_STATUS_REJECTED = 4;
  ORDER_STATUS_EXPIRED = 5;
}

// Risk level
enum RiskLevel {
  RISK_LEVEL_LOW = 0;
  RISK_LEVEL_MEDIUM = 1;
  RISK_LEVEL_HIGH = 2;
  RISK_LEVEL_CRITICAL = 3;
}

// Event severity
enum EventSeverity {
  EVENT_SEVERITY_INFO = 0;
  EVENT_SEVERITY_WARNING = 1;
  EVENT_SEVERITY_ERROR = 2;
  EVENT_SEVERITY_CRITICAL = 3;
}

// Notification channels
enum NotificationChannel {
  NOTIFICATION_CHANNEL_EMAIL = 0;
  NOTIFICATION_CHANNEL_SMS = 1;
  NOTIFICATION_CHANNEL_WEBHOOK = 2;
  NOTIFICATION_CHANNEL_IN_APP = 3;
  NOTIFICATION_CHANNEL_SLACK = 4;
}
